Improve auth token handling and refresh homepage