@@ -7,6 +7,7 @@ import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
@@ -14,8 +15,6 @@ import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.security.core.GrantedAuthority;
 
 /**
  * Utility class for JWT token generation and validation.
@@ -38,20 +37,22 @@ public class JwtUtil {
         getSigningKey();
     }
 
+    /**
+     * Generates an access token for an authenticated principal.
+     */
     public String generateToken(Authentication authentication) {
-        UserDetails userPrincipal = (UserDetails) authentication.getPrincipal();
-        List<String> roles = userPrincipal.getAuthorities().stream()
+        UserDetails principal = (UserDetails) authentication.getPrincipal();
+        List<String> roles = principal.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
-        String token = generateTokenFromEmailAndRoles(userPrincipal.getUsername(), roles);
-        return token;
+                .toList();
+        return generateTokenFromEmailAndRoles(principal.getUsername(), roles);
     }
 
     /**
-     * Generate JWT token from email and roles.
+     * Generates an access token from an email address and role list.
      */
     public String generateTokenFromEmailAndRoles(String email, List<String> roles) {
-        String token = Jwts.builder()
+        return Jwts.builder()
                 .subject(email)
                 .issuedAt(new Date())
                 .claim("tokenType", "access")
@@ -59,31 +60,29 @@ public class JwtUtil {
                 .expiration(new Date(System.currentTimeMillis() + accessTokenExpiration))
                 .signWith(getSigningKey())
                 .compact();
-        return token;
     }
 
     /**
-     * Generate JWT token from email without roles (fallback/legacy).
+     * Generates an access token for the given email without role claims (fallback/legacy).
      */
     public String generateTokenFromEmail(String email) {
         return generateTokenFromEmailAndRoles(email, List.of());
     }
 
     /**
-     * Extract email from JWT token.
+     * Extracts the subject (email) from a signed JWT token.
      */
     public String getEmailFromToken(String token) {
-        String email = Jwts.parser()
+        return Jwts.parser()
                 .verifyWith(getSigningKey())
                 .build()
                 .parseSignedClaims(token)
                 .getPayload()
                 .getSubject();
-        return email;
     }
 
     /**
-     * Extract roles from JWT token.
+     * Extracts the role list from the {@code roles} claim of a signed JWT token.
      */
     public List<String> getRolesFromToken(String token) {
         Claims claims = Jwts.parser()
@@ -97,7 +96,7 @@ public class JwtUtil {
     }
 
     /**
-     * Validate JWT token.
+     * Returns {@code true} if the token signature and expiry are valid.
      */
     public boolean validateToken(String token) {
         try {
@@ -112,43 +111,38 @@ public class JwtUtil {
     }
 
     /**
-     * Builds the JWT signing key from configured secret using Base64, Base64URL, or
-     * raw text fallback.
+     * Builds the JWT signing key from the configured secret.
+     * Accepts Base64, Base64URL, or plain-text secrets.
      */
     private SecretKey getSigningKey() {
         byte[] keyBytes = decodeSecret(jwtSecret);
         if (keyBytes.length < 32) {
             throw new IllegalStateException("jwt.secret must be at least 32 bytes for HS256 signing.");
         }
-        SecretKey signingKey = Keys.hmacShaKeyFor(keyBytes);
-        return signingKey;
+        return Keys.hmacShaKeyFor(keyBytes);
     }
 
     /**
-     * Decodes secret value from Base64/Base64URL and falls back to UTF-8 bytes for
-     * plain text secrets.
+     * Decodes the secret using Base64 / Base64URL and falls back to UTF-8 bytes
+     * for plain-text secrets used in local/dev environments.
      */
     private byte[] decodeSecret(String secret) {
         if (secret == null || secret.isBlank()) {
             throw new IllegalStateException("jwt.secret is missing or blank.");
         }
 
-        String normalizedSecret = secret.trim();
+        String normalized = secret.trim();
 
         try {
-            byte[] base64DecodedSecret = Decoders.BASE64.decode(normalizedSecret);
-            return base64DecodedSecret;
+            return Decoders.BASE64.decode(normalized);
         } catch (RuntimeException ignored) {
             // Fallback to Base64URL or plain text for local/dev setups.
         }
 
         try {
-            byte[] base64UrlDecodedSecret = Decoders.BASE64URL.decode(normalizedSecret);
-            return base64UrlDecodedSecret;
+            return Decoders.BASE64URL.decode(normalized);
         } catch (RuntimeException ignored) {
-            byte[] plainTextSecret = normalizedSecret.getBytes(StandardCharsets.UTF_8);
-            return plainTextSecret;
+            return normalized.getBytes(StandardCharsets.UTF_8);
         }
     }
-
 }
